# learn-oauth-errors-with-python-social-auth

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
accounts/: urls.py  views.py
accounts/templates/: index.html  index.j2
accounts/templatetags/: custom_tags.py
config/: middleware.py  settings.py  urls.py
